# ca-task

./: .gitignore  README.md  dismissal_feature_importance.csv  dismissal_predictor_model.pkl  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
ca_task/: app.py  dashboard.py  dismissal_proba.py  eda.ipynb  game_insights.ipynb  utility.py
data/: Deliveries.csv  LookupTypes.csv  Lookups.csv  Matches.csv  Players.csv  Series.csv  Teams.csv  enhanced_cricket_data.csv  enhanced_cricket_data_all_games.csv  gdf.csv
