[tool.poetry]
name = "ca-task"
version = "0.1.0"
description = ""
authors = ["Stuart Mills <stumills@outlook.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
pandasql = "^0.7.3"
streamlit = "^1.45.1"
plotly = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
